--- a/package.json
+++ b/package.json
@@ -1,4 +1,6 @@
+
 {
+  
   "name": "budget-app",
   "version": "1.0.0",
   "description": "",
@@ -6,7 +8,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js",
-    "lite-server": "lite-server"
+    "lite-server": "lite-server",
+    "heroku-postbuild": "npm run build"
   },
   "repository": {
     "type": "git",
@@ -25,4 +28,5 @@
     "mongoose": "^5.5.15",
     "morgan": "^1.9.1"
   }
+  
 }
